fix: z-index у сортировки

--- a/components/product-grid/product-grid.sass
+++ b/components/product-grid/product-grid.sass
@@ -350,6 +350,8 @@
 		display: flex
 		flex-direction: row
 		margin-top: 17px
+		z-index: 20
+		position: relative
 	&__filter-open
 		border: 1px solid #000
 		border-radius: 80px
